--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-table/css/module-table.css
@@ -11,17 +11,21 @@
  */
 
 
-.module-table__head { margin-top: 0; margin-bottom: 22px; }
+.module-table__head { margin-top: 0; }
 
 .module-table__row:nth-child(odd) { background-color: #F8F8F8; }
 
-.module-table__col { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; }
+.module-table__col { width: 100%; margin-bottom: 0; line-height: 2rem; }
 
-@media screen and (max-width: 991px) { .module-table { margin-bottom: 30px; }
+.module-table__col:first-child { -webkit-align-self: flex-start; -ms-flex-item-align: start; align-self: flex-start; }
+
+@media screen and (max-width: 991px) { .module-table { margin-bottom: 46px; }
+  .module-table:last-child { margin-bottom: 0; }
   .module-table__row { padding: 12px 15px; }
-  .module-table__head { padding-left: 15px; } }
+  .module-table__head { padding-left: 15px; margin-bottom: 10px; } }
 
-@media screen and (min-width: 992px) { .module-table { margin-bottom: 60px; }
-  .module-table__head { margin-bottom: 48px; padding-left: 20px; }
-  .module-table__row { -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; padding: 26px 20px; }
-  .module-table__col { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; } }
+@media screen and (min-width: 992px) { .module-table { margin-bottom: 86px; }
+  .module-table:last-child { margin-bottom: 0; }
+  .module-table__head { margin-bottom: 24px; padding-left: 20px; }
+  .module-table__row { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; padding: 26px 20px; }
+  .module-table__col { width: 50%; } }
